--- a/package.json
+++ b/package.json
@@ -12,10 +12,42 @@
   "activationEvents": [],
   "main": "./dist/extension.js",
   "contributes": {
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "coolify-sidebar",
+          "title": "Coolify for VSCode",
+          "icon": "public/logo.svg"
+        }
+      ]
+    },
+    "views": {
+      "coolify-sidebar": [
+        {
+          "id": "coolify-deployments",
+          "name": "Deployments",
+          "type": "tree",
+          "visibility": "visible"
+        }
+      ]
+    },
+    "viewsWelcome": [
+      {
+        "view": "coolify-deployments",
+        "contents": "Welcome to Coolify for VSCode!\n\nTo get started, configure your Coolify server settings.\n\n[Configure Settings](command:coolify.configure)\n\nLearn more about [how to configure](https://coolify.io/docs/api-reference/authorization)",
+        "when": "!coolify.isConfigured"
+      }
+    ],
     "commands": [
       {
-        "command": "vscode-coolify.testExtension",
-        "title": "Test Coolify for VSCode extension"
+        "command": "coolify.configure",
+        "title": "Configure Coolify for VSCode",
+        "enablement": "!coolify.isConfigured"
+      },
+      {
+        "command": "coolify.reconfigure",
+        "title": "Reconfigure Coolify for VSCode",
+        "enablement": "coolify.isConfigured"
       }
     ]
   },
