--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
       "coolify-sidebar": [
         {
           "id": "coolify-deployments",
-          "name": "Deployments",
+          "name": "Coolify Deployments",
           "type": "tree",
           "visibility": "visible"
         }
